--- a/TDm1/TDM1-code-to-complete/.project
+++ b/TDm1/TDM1-code-to-complete/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TDM1-code-to-complete</name>
+	<name>TDGuitar-code-to-complete</name>
 	<comment></comment>
 	<projects>
 	</projects>
