--- a/Design Patterns exercices/.classpath
+++ b/Design Patterns exercices/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="lib" path="W:/Cours et travaux étudiants INFO/TP INFO2/M3105/Laforcade Pierre/depots GIT/M3105-code-a-trou/SizeOf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
